--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,3 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
+
+main {
+    max-width: 100vw; /* Prevents the main content from expanding beyond the viewport */
+    overflow-x: hidden; /* Ensures no horizontal overflow */
+}
